--- a/DCS.Alternative.Launcher/DCS.Alternative.Launcher.csproj
+++ b/DCS.Alternative.Launcher/DCS.Alternative.Launcher.csproj
@@ -147,6 +147,9 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="ComponentModel\NavigationAwareBase.cs" />
+    <Compile Include="Controls\MessageBoxEx\MessageBoxEx.xaml.cs">
+      <DependentUpon>MessageBoxEx.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\NewsArticleControl.xaml.cs">
       <DependentUpon>NewsArticleControl.xaml</DependentUpon>
     </Compile>
@@ -157,6 +160,7 @@
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Modules\ModuleIds.cs" />
     <Compile Include="Plugins\Game\GamePlugin.cs" />
+    <Compile Include="Plugins\Game\Views\GameController.cs" />
     <Compile Include="Plugins\Game\Views\GameViewModel.cs" />
     <Compile Include="Extensions\AssemblyExtensions.cs" />
     <Compile Include="Plugins\Settings\Dialogs\EditModuleViewportWindow.xaml.cs">
@@ -215,6 +219,10 @@
     <Compile Include="Windows\MainWindowViewModel.cs" />
     <Compile Include="ServiceModel\Syndication\SyndicationHelper.cs" />
     <Compile Include="Xml\XmlHelper.cs" />
+    <Page Include="Controls\MessageBoxEx\MessageBoxEx.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Controls\NewsArticleControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -313,10 +321,6 @@
     <Resource Include="Images\jabbers-logo.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Images\1.jpg" />
-    <Resource Include="Images\2.jpg" />
-  </ItemGroup>
-  <ItemGroup>
     <Resource Include="Images\dcs-world-logo.png" />
   </ItemGroup>
   <ItemGroup>
@@ -343,6 +347,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Web\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\dal-icon-256.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
