Added better exception handling for settings. Exceptions flowing through happy paths should copy to clipboard and presesnt the user with a dialog of the error.

--- a/DCS.Alternative.Launcher/DCS.Alternative.Launcher.csproj
+++ b/DCS.Alternative.Launcher/DCS.Alternative.Launcher.csproj
@@ -212,6 +212,7 @@
     <Compile Include="Modules\M2000CModule.cs" />
     <Compile Include="Threading\HandlerTaskSourceBase.cs" />
     <Compile Include="Models\NewsArticle.cs" />
+    <Compile Include="UserFriendlyExceptionHandler.cs" />
     <Compile Include="Views\SettingsView.xaml.cs">
       <DependentUpon>SettingsView.xaml</DependentUpon>
     </Compile>
