--- a/DCS.Alternative.Launcher/packages.config
+++ b/DCS.Alternative.Launcher/packages.config
@@ -9,6 +9,10 @@
   <package id="HtmlAgilityPack" version="1.11.9" targetFramework="net461" />
   <package id="KeraLua" version="1.0.14" targetFramework="net461" />
   <package id="LoadingIndicators.WPF" version="0.0.1" targetFramework="net461" />
+  <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net461" />
+  <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net461" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net461" />
+  <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="net461" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.0.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net461" />
   <package id="NLua" version="1.4.18" targetFramework="net461" />
