--- a/DCS.Alternative.Launcher/packages.config
+++ b/DCS.Alternative.Launcher/packages.config
@@ -5,6 +5,7 @@
   <package id="CefSharp.Common" version="73.1.130" targetFramework="net461" />
   <package id="CefSharp.Wpf" version="73.1.130" targetFramework="net461" />
   <package id="ControlzEx" version="3.0.2.4" targetFramework="net461" />
+  <package id="Extended.Wpf.Toolkit" version="3.5.0" targetFramework="net461" />
   <package id="FluentWPF" version="0.7.0" targetFramework="net461" />
   <package id="HtmlAgilityPack" version="1.11.9" targetFramework="net461" />
   <package id="KeraLua" version="1.0.14" targetFramework="net461" />
